--- a/src/modules/universe/layout.module.css
+++ b/src/modules/universe/layout.module.css
@@ -15,6 +15,7 @@
     padding: .5em;
     width: 3.5em;
     gap: .5rem;
+    overflow: hidden;
 }
 
 .content {
